--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     header {
       text-align: center;
-      background: linear-gradient(135deg, #3498db, #2ecc71);
+      background: #3498db;
       color: white;
       padding: 2rem 1rem;
     }
@@ -106,7 +106,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome Team!</h1>
+    <h1>The Hopebots Robotics team</h1>
     <p>This is our robotics team hub where you can find all resources, project details, schedules, and more. We're excited to build amazing robots using LEGO Spike Prime and Arduino kits!</p>
   </header>
 
@@ -125,16 +125,16 @@
         <p>Getting started with Spike Prime</p>
       </div>
       <div class="resource-item">
-        <h4>Arduino for Beginners</h4>
-        <p>Intro guide for Arduino circuits</p>
+        <h4>FLL test page</h4>
+        <a target="_blank" href="/fll-challenge-submerged-team-thinkscape-instructions.pdf">Click here to download it</a>
       </div>
       <div class="resource-item">
         <h4>Programming Concepts</h4>
         <p>Core concepts for kids in robotics</p>
       </div>
       <div class="resource-item">
-        <h4>Sensors Guide</h4>
-        <p>Working with different sensors</p>
+        <h4>Lego Color Sorting Robot</h4>
+        <a target="_blank" href="https://www.youtube.com/watch?v=Ukqfc0YqERA">Lego Color Sorting Robot by SPIKE PRIME video link</a>
       </div>
       <div class="resource-item">
         <h4>Project Rubric</h4>
