--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Plumberz</h1>
+                    <h1 class="text-primary m-0">Alelabs.tech</h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="fa fa-map-marker-alt text-primary me-2"></i>
-                    <p class="m-0">123 Street, New York, USA</p>
+                    <p class="m-0">Gisozi, Gasabo, RWANDA</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="far fa-envelope-open text-primary me-2"></i>
-                    <p class="m-0">info@example.com</p>
+                    <p class="m-0">alelabsservices@egmail.com</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a> -->
+                    <a target="_blank" class="btn btn-sm-square bg-white text-primary me-1" href="https://x.com/alelabstech"><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                    <a target="blank" class="btn btn-sm-square bg-white text-primary me-0" href="https://www.instagram.com/alelabs.tech/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Plumberz</h1>
+                <h1 class="text-primary m-0">Alelabs Kigali</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -117,11 +117,11 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Plumbing & Repairing Services</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Efficient Residential Plumbing Services</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Information technology solutions</h5>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">CCTV security camera installations</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">In alelabs, we put safety and service ahead of everything, we provide and install security cameras in homes, Businesses and instuitions with maintenance addition</p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Free Quote</a>
+                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
                             </div>
                         </div>
                     </div>
@@ -133,11 +133,27 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Plumbing & Repairing Services</h
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Efficient Commercial Plumbing Services</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Networking at Homes and Business</h>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Internet Extensions to wider coverage and maintenance. </h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2"> Wifi installations, and the extension of internet for the wider coverage and maintenance of internet connectivity.</p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Free Quote</a>
+                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                        <div class="owl-carousel-item position-relative">
+                <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .4);">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-10 col-lg-8">
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Computer lab setup and mentainance</h>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Installations of servers and computers. </h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2"> We install and configure complete computer labs, including network, power, devices, and software—ready for immediate use..</p>
+                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
                             </div>
                         </div>
                     </div>
@@ -157,7 +173,7 @@
                         <img class="img-fluid w-100 h-100" src="img/service-1.jpg" alt="">
                     </div>
                     <div class="d-flex align-items-center justify-content-between bg-light p-4">
-                        <h5 class="text-truncate me-3 mb-0">Residential Plumbing</h5>
+                        <h5 class="text-truncate me-3 mb-0">CCTV/Security camera installations. </h5>
                         <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href=""><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
@@ -166,7 +182,7 @@
                         <img class="img-fluid w-100 h-100" src="img/service-2.jpg" alt="">
                     </div>
                     <div class="d-flex align-items-center justify-content-between bg-light p-4">
-                        <h5 class="text-truncate me-3 mb-0">Commercial Plumbing</h5>
+                        <h5 class="text-truncate me-3 mb-0">Networking Solutions. </h5>
                         <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href=""><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
@@ -175,7 +191,7 @@
                         <img class="img-fluid w-100 h-100" src="img/service-3.jpg" alt="">
                     </div>
                     <div class="d-flex align-items-center justify-content-between bg-light p-4">
-                        <h5 class="text-truncate me-3 mb-0">Emergency Servicing</h5>
+                        <h5 class="text-truncate me-3 mb-0">Computer labs setup and mentainance</h5>
                         <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href=""><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
@@ -191,7 +207,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase">About Us</h6>
-                    <h1 class="mb-4">We Are Trusted Plumbing Company Since 1990</h1>
+                    <h1 class="mb-4">We Are Trusted Networking Company in region</h1>
                     <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Residential & commercial plumbing</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Quality services at affordable prices</p>
