updated web files

--- a/about.html
+++ b/about.html
@@ -43,27 +43,27 @@
 
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-light d-none d-lg-block">
+ <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Plumberz</h1>
+                    <h1 class="text-primary m-0">Alelabs.tech</h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="fa fa-map-marker-alt text-primary me-2"></i>
-                    <p class="m-0">123 Street, New York, USA</p>
+                    <p class="m-0">Gisozi, Gasabo, RWANDA</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="far fa-envelope-open text-primary me-2"></i>
-                    <p class="m-0">info@example.com</p>
+                    <p class="m-0">alelabsservices@egmail.com</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a> -->
+                    <a target="_blank" class="btn btn-sm-square bg-white text-primary me-1" href="https://x.com/alelabstech"><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                    <a target="blank" class="btn btn-sm-square bg-white text-primary me-0" href="https://www.instagram.com/alelabs.tech/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="ms-3">
                         <p class="mb-1 text-white">Emergency 24/7</p>
-                        <h5 class="m-0 text-secondary">+012 345 6789</h5>
+                        <h5 class="m-0 text-secondary">+250 788 612171</h5>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 py-5">
+    <!-- <div class="container-fluid page-header mb-5 py-5">
         <div class="container">
             <h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>
             <nav aria-label="breadcrumb animated slideInDown">
@@ -119,38 +119,38 @@
                 </ol>
             </nav>
         </div>
-    </div>
+    </div> -->
     <!-- Page Header End -->
 
 
     <!-- Service Start -->
-    <div class="container-xxl py-5">
+      <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.1s">
                     <div class="overflow-hidden">
-                        <img class="img-fluid w-100 h-100" src="img/service-1.jpg" alt="">
+                        <img class="img-fluid w-100 h-100" src="img/camera-1639219 (1).jpg" alt="">
                     </div>
                     <div class="d-flex align-items-center justify-content-between bg-light p-4">
-                        <h5 class="text-truncate me-3 mb-0">Residential Plumbing</h5>
+                        <h5 class="text-truncate me-3 mb-0">CCTV/Security camera installations. </h5>
                         <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href=""><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.3s">
                     <div class="overflow-hidden">
-                        <img class="img-fluid w-100 h-100" src="img/service-2.jpg" alt="">
+                        <img class="img-fluid w-100 h-100" src="img/wifirouter.jpg" alt="">
                     </div>
                     <div class="d-flex align-items-center justify-content-between bg-light p-4">
-                        <h5 class="text-truncate me-3 mb-0">Commercial Plumbing</h5>
+                        <h5 class="text-truncate me-3 mb-0">Networking Solutions. </h5>
                         <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href=""><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.5s">
                     <div class="overflow-hidden">
-                        <img class="img-fluid w-100 h-100" src="img/service-3.jpg" alt="">
+                        <img class="img-fluid w-100 h-100" src="img/lab2 (1).jpg" alt="">
                     </div>
                     <div class="d-flex align-items-center justify-content-between bg-light p-4">
-                        <h5 class="text-truncate me-3 mb-0">Emergency Servicing</h5>
+                        <h5 class="text-truncate me-3 mb-0">Computer labs setup and mentainance`</h5>
                         <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href=""><i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
@@ -161,15 +161,15 @@
 
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+   <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase">About Us</h6>
-                    <h1 class="mb-4">We Are Trusted Plumbing Company Since 1990</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Residential & commercial plumbing</p>
-                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Quality services at affordable prices</p>
+                    <h1 class="mb-4">We Are Trusted Networking Company in region</h1>
+                    <p class="mb-4">Alelabs Tech is a trusted provider of advanced security and networking solutions for homes and businesses. We specialize in the installation and maintenance of modern residential and commercial security systems, ensuring your peace of mind around the clock.</p>
+                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Residential & commercial security systems</p>
+                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Quality networking solutions at affordable prices</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Immediate 24/ 7 emergency services</p>
                     <div class="bg-primary d-flex align-items-center p-4 mt-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 60px; height: 60px;">
@@ -177,14 +177,14 @@
                         </div>
                         <div class="ms-3">
                             <p class="fs-5 fw-medium mb-2 text-white">Emergency 24/7</p>
-                            <h3 class="m-0 text-secondary">+012 345 6789</h3>
+                            <h3 class="m-0 text-secondary">+250 788 612171</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 pt-4" style="min-height: 500px;">
                     <div class="position-relative h-100 wow fadeInUp" data-wow-delay="0.5s">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/about-1.jpg" style="object-fit: cover; padding: 0 0 50px 100px;" alt="">
-                        <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50" src="img/about-2.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/bgs.jpg" style="object-fit: cover; padding: 0 0 50px 100px;" alt="">
+                        <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50" src="img/wificov (1).jpg" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
