--- a/service.html
+++ b/service.html
@@ -47,23 +47,23 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Plumberz</h1>
+                    <h1 class="text-primary m-0">Alelabs.tech</h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="fa fa-map-marker-alt text-primary me-2"></i>
-                    <p class="m-0">123 Street, New York, USA</p>
+                    <p class="m-0">Gisozi, Gasabo, RWANDA</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="far fa-envelope-open text-primary me-2"></i>
-                    <p class="m-0">info@example.com</p>
+                    <p class="m-0">alelabsservices@egmail.com</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a> -->
+                    <a target="_blank" class="btn btn-sm-square bg-white text-primary me-1" href="https://x.com/alelabstech"><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                    <a target="blank" class="btn btn-sm-square bg-white text-primary me-0" href="https://www.instagram.com/alelabs.tech/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Plumberz</h1>
+                <h1 class="text-primary m-0">Alelabs Kigali</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -89,6 +89,7 @@
                     <a href="testimonial.html" class="nav-item nav-link">Testimonial</a>
                     <a href="booking.html" class="nav-item nav-link">Booking</a>
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
@@ -98,7 +99,7 @@
                     </div>
                     <div class="ms-3">
                         <p class="mb-1 text-white">Emergency 24/7</p>
-                        <h5 class="m-0 text-secondary">+012 345 6789</h5>
+                        <h5 class="m-0 text-secondary">+250 788 612171</h5>
                     </div>
                 </div>
             </div>
@@ -127,10 +128,10 @@
                     <div class="owl-carousel service-carousel position-relative wow fadeInUp" data-wow-delay="0.1s">
                         <div class="bg-light p-4">
                             <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
-                                <!-- <i class="fa fa-water fa-2x text-primary"></i> -->
+                                <i class="fa fa-water fa-2x text-primary"></i>
                             </div>
-                            <h4 class="mb-3">CCTV isntallation</h4>
-                            <p>This service is available for home, businesses, insitutions and any work place like Farms </p>
+                            <h4 class="mb-3">CCTV installation</h4>
+                            <p>This service is available for home, businesses in Kigali and outside. </p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
