--- a/booking.html
+++ b/booking.html
@@ -155,38 +155,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="bg-light text-center p-5">
-                        <h1 class="mb-4">Book For A Service</h1>
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
-                                        <option selected>Select A Service</option>
-                                        <option value="1">Service 1</option>
-                                        <option value="2">Service 2</option>
-                                        <option value="3">Service 3</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="date" id="date1" data-target-input="nearest">
-                                        <input type="text"
-                                            class="form-control border-0 datetimepicker-input"
-                                            placeholder="Service Date" data-target="#date1" data-toggle="datetimepicker" style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control border-0" placeholder="Special Request"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
-                                </div>
-                            </div>
-                        </form>
+                                                <h1 class="mb-4">Book For A Service</h1>                        <form id="booking-form">                            <div class="row g-3">                                <div class="col-12 col-sm-6">                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>                                </div>                                <div class="col-12 col-sm-6">                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>                                </div>                                <div class="col-12 col-sm-6">                                    <select class="form-select border-0" style="height: 55px;" required>                                        <option value="">Select A Service</option>                                        <option value="CCTV installations">CCTV installations</option>                                        <option value="Internet connectivity">Internet connectivity</option>                                        <option value="Computer lab">Computer lab</option>                                    </select>                                </div>                                <div class="col-12 col-sm-6">                                    <div class="date" id="date1" data-target-input="nearest">                                        <input type="text"                                            class="form-control border-0 datetimepicker-input"                                            placeholder="Service Date" data-target="#date1" data-toggle="datetimepicker" style="height: 55px;" required>                                    </div>                                </div>                                <div class="col-12">                                    <textarea class="form-control border-0" placeholder="Special Request" required></textarea>                                </div>                                <div class="col-12">                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>                                </div>                            </div>                        </form>
                     </div>
                 </div>
             </div>
@@ -201,9 +170,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250 788 612171</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>alelabsservices@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -213,22 +182,24 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Opening Hours</h4>
-                    <h6 class="text-light">Monday - Friday:</h6>
-                    <p class="mb-4">09.00 AM - 09.00 PM</p>
+                    <h6 class="text-light">Monday - Thursday:</h6>
+                    <p class="mb-4">5.00 PM - 09.00 PM</p>
+                     <h6 class="text-light">Friday:</h6>
+                    <p class="mb-4">7.00 PM - 09.00 PM</p>
                     <h6 class="text-light">Saturday - Sunday:</h6>
-                    <p class="mb-0">09.00 AM - 12.00 PM</p>
+                    <p class="mb-0">3.00 PM - 9.00 PM</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">Drain Cleaning</a>
-                    <a class="btn btn-link" href="">Sewer Line</a>
-                    <a class="btn btn-link" href="">Water Heating</a>
-                    <a class="btn btn-link" href="">Toilet Cleaning</a>
-                    <a class="btn btn-link" href="">Broken Pipe</a>
+                    <a class="btn btn-link" href="">CCTV cameras</a>
+                    <a class="btn btn-link" href="">Internet connectivity</a>
+                    <a class="btn btn-link" href="">Computer labs</a>
+                    <a class="btn btn-link" href="">Computer labs mentainance</a>
+                    <!-- <a class="btn btn-link" href="">Broken Pipe</a> -->
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Stay updated with our new letter.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
@@ -240,11 +211,11 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Alelabs | Networking solutions anywhere & anytime. </a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom" href="#">Alelabs.tech team</a>
                     </div>
                 </div>
             </div>
@@ -269,8 +240,4 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
-</body>
-
-</html>
+        <!-- Template Javascript -->    <script src="js/main.js"></script>    <!-- EmailJS Library -->    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>        <!-- Forms Javascript -->    <script src="js/forms.js"></script></body></html>
