--- a/contact.html
+++ b/contact.html
@@ -178,12 +178,7 @@
                     <a class="btn btn-link" href="">Maintenance</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Fill thsi form to stay updated and get discounts.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                                        <h4 class="text-light mb-4">Newsletter</h4>                    <p>Fill this form to stay updated and get discounts.</p>                    <form id="footer-newsletter-form">                        <div class="position-relative mx-auto" style="max-width: 400px;">                            <input id="footer-newsletter-email" class="form-control border-0 w-100 py-3 ps-4 pe-5" type="email" placeholder="Your email" required>                            <button id="footer-newsletter-submit" type="submit" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>                        </div>                    </form>
                 </div>
             </div>
         </div>
@@ -220,4 +215,4 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-        <!-- Template Javascript -->    <script src="js/main.js"></script>    <!-- EmailJS Library -->    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>        <!-- Forms Javascript -->    <script src="js/forms.js"></script></body></html>
+        <!-- Template Javascript -->    <script src="js/main.js"></script>    <!-- EmailJS Library -->    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>    <!-- Forms Javascript -->    <script src="js/forms.js"></script>    <!-- Footer Newsletter Javascript -->    <script src="js/footer-newsletter.js"></script></body></html>
