--- a/index.html
+++ b/index.html
@@ -479,4 +479,4 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-        <!-- Template Javascript -->    <script src="js/main.js"></script>    <!-- EmailJS Library -->    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>        <!-- Newsletter Javascript -->    <script src="js/newsletter.js"></script></body></html>
+        <!-- Template Javascript -->    <script src="js/main.js"></script>    <!-- EmailJS Library -->    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>    <!-- Forms Javascript -->    <script src="js/forms.js"></script>    <!-- Footer Newsletter Javascript -->    <script src="js/footer-newsletter.js"></script></body></html>
