--- a/testimonial.html
+++ b/testimonial.html
@@ -82,13 +82,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
-                    <a href="team.html" class="nav-item nav-link">Technicians</a>
-                    <a href="testimonial.html" class="nav-item nav-link">Testimonial</a>
-                    <a href="booking.html" class="nav-item nav-link">Booking</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="index.html" class="nav-item nav-link">Vision</a>
+                    <a href="about.html" class="nav-item nav-link">Our Mission</a>
+                    <a href="service.html" class="nav-item nav-link">Breakthrough Solutions</a>
+                    <a href="team.html" class="nav-item nav-link">Connect With Experts</a>
+                    <a href="testimonial.html" class="nav-item nav-link">Success Stories</a>
+                    <a href="booking.html" class="nav-item nav-link">Schedule Now</a>
+                    <a href="contact.html" class="nav-item nav-link active">Reach Out</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 45px; height: 45px;">
