--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="far fa-envelope-open text-primary me-2"></i>
-                    <p class="m-0">alelabshq@gmail.com</p>
+                    <p class="m-0">alelabsservices@gmail.com</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -82,13 +82,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
-                    <a href="team.html" class="nav-item nav-link">Technicians</a>
-                    <a href="testimonial.html" class="nav-item nav-link">Testimonial</a>
-                    <a href="booking.html" class="nav-item nav-link">Booking</a>
-                    <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                    <a href="index.html" class="nav-item nav-link">Vision</a>
+                    <a href="about.html" class="nav-item nav-link">Our Mission</a>
+                    <a href="service.html" class="nav-item nav-link">Breakthrough Solutions</a>
+                    <a href="team.html" class="nav-item nav-link">Connect With Experts</a>
+                    <a href="testimonial.html" class="nav-item nav-link">Success Stories</a>
+                    <a href="booking.html" class="nav-item nav-link">Schedule Now</a>
+                    <a href="contact.html" class="nav-item nav-link active">Reach Out</a>
                     </div>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
