--- a/service.html
+++ b/service.html
@@ -82,13 +82,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
-                    <a href="team.html" class="nav-item nav-link">Technicians</a>
-                    <a href="testimonial.html" class="nav-item nav-link">Testimonial</a>
-                    <a href="booking.html" class="nav-item nav-link">Booking</a>
-                    <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                    <a href="index.html" class="nav-item nav-link">Vision</a>
+                    <a href="about.html" class="nav-item nav-link">Our Mission</a>
+                    <a href="service.html" class="nav-item nav-link">Breakthrough Solutions</a>
+                    <a href="team.html" class="nav-item nav-link">Connect With Experts</a>
+                    <a href="testimonial.html" class="nav-item nav-link">Success Stories</a>
+                    <a href="booking.html" class="nav-item nav-link">Schedule Now</a>
+                    <a href="contact.html" class="nav-item nav-link active">Reach Out</a>
                 </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
